--- a/package.json
+++ b/package.json
@@ -1,14 +1,50 @@
 {
   "name": "verify-rsa-jwt-cloudflare-worker",
-  "version": "0.0.0",
-  "private": true,
+  "description": "Verify RSA JWT on Cloudflare Workers",
+  "author": "Wataru Oguchi",
+  "version": "1.0.0",
+  "license": "MIT",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist/index.d.ts"
+  ],
   "scripts": {
-    "deploy": "wrangler deploy",
-    "start": "wrangler dev"
+    "start": "wrangler dev src/worker.ts",
+    "test": "jest",
+    "build": "tsc -p tsconfig.build.json",
+    "lint": "eslint --ext .ts src",
+    "lint:fix": "eslint --fix --ext .ts src",
+    "prettier": "prettier --write --list-different '**/*.ts' '**/*.json' '**/*.js'",
+    "prettier:check": "prettier --check '**/*.ts' '**/*.json' '**/*.js'",
+    "gen-pem-keys": "sh ./gen-pem-keys.sh"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20230419.0",
-    "typescript": "^5.0.4",
+    "@types/eslint": "^8",
+    "@types/jest": "^29.5.3",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/pem-jwk": "^2.0.0",
+    "@typescript-eslint/eslint-plugin": "^6.2.0",
+    "@typescript-eslint/parser": "^6.2.0",
+    "dotenv": "^16.3.1",
+    "eslint": "^8.45.0",
+    "jest": "^29.6.1",
+    "jest-environment-miniflare": "^2.14.0",
+    "jsonwebtoken": "^9.0.1",
+    "pem-jwk": "^2.0.0",
+    "prettier": "^3.0.0",
+    "ts-jest": "^29.1.1",
+    "typescript": "^5.1.6",
     "wrangler": "^3.0.0"
-  }
+  },
+  "keywords": [
+    "cloudflare",
+    "workers",
+    "jwt",
+    "rsa",
+    "verify",
+    "RS256",
+    "authentication"
+  ]
 }
