--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "lint:fix": "eslint --fix --ext .ts src",
     "prettier": "prettier --write --list-different '**/*.ts' '**/*.json' '**/*.js'",
     "prettier:check": "prettier --check '**/*.ts' '**/*.json' '**/*.js'",
+    "postinstall": "lefthook install",
+    "prepublish": "yarn test",
+    "lefthook:pre-commit": "lefthook run pre-commit",
     "gen-pem-keys": "sh ./gen-pem-keys.sh"
   },
   "devDependencies": {
@@ -32,6 +35,7 @@
     "jest": "^29.6.1",
     "jest-environment-miniflare": "^2.14.0",
     "jsonwebtoken": "^9.0.1",
+    "lefthook": "^1.4.7",
     "pem-jwk": "^2.0.0",
     "prettier": "^3.0.0",
     "ts-jest": "^29.1.1",
