--- a/package.json
+++ b/package.json
@@ -2,12 +2,20 @@
   "name": "verify-rsa-jwt-cloudflare-worker",
   "description": "Verify RSA JWT on Cloudflare Workers",
   "author": "Wataru Oguchi",
-  "version": "1.0.1",
+  "version": "1.0.3",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/wataruoguchi/verify-rsa-jwt-cloudflare-worker.git"
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org"
+  },
+  "bugs": "https://github.com/wataruoguchi/verify-rsa-jwt-cloudflare-worker/issues",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
-    "dist/index.d.ts"
+    "dist/**/*"
   ],
   "scripts": {
     "start": "wrangler dev src/worker.ts",
@@ -49,6 +57,8 @@
     "rsa",
     "verify",
     "RS256",
-    "authentication"
+    "authentication",
+    "hono",
+    "middleware"
   ]
 }
