--- a/package.json
+++ b/package.json
@@ -1,67 +1,12 @@
 {
-  "name": "verify-rsa-jwt-cloudflare-worker",
-  "description": "Verify RSA JWT on Cloudflare Workers",
+  "name": "monorepo-verify-rsa-jwt-cloudflare-worker",
+  "private": true,
   "author": "Wataru Oguchi",
-  "version": "1.0.6",
   "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/wataruoguchi/verify-rsa-jwt-cloudflare-worker.git"
-  },
-  "publishConfig": {
-    "registry": "https://registry.npmjs.org"
-  },
-  "bugs": "https://github.com/wataruoguchi/verify-rsa-jwt-cloudflare-worker/issues",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "type": "module",
-  "files": [
-    "dist/**/*"
+  "workspaces": [
+    "packages/rsa-jwt",
+    "example/hono-app"
   ],
-  "scripts": {
-    "start": "wrangler dev src/worker.ts",
-    "test": "jest",
-    "build": "rimraf dist && tsc -p tsconfig.build.json",
-    "lint": "eslint --ext .ts src",
-    "lint:fix": "eslint --fix --ext .ts src",
-    "prettier": "prettier --write --list-different '**/*.ts' '**/*.json' '**/*.js'",
-    "prettier:check": "prettier --check '**/*.ts' '**/*.json' '**/*.js'",
-    "prepublish": "yarn test && yarn publint",
-    "lefthook:pre-commit": "lefthook run pre-commit",
-    "gen-pem-keys": "sh ./gen-pem-keys.sh"
-  },
-  "devDependencies": {
-    "@cloudflare/workers-types": "^4.20230419.0",
-    "@types/eslint": "^8",
-    "@types/jest": "^29.5.3",
-    "@types/jsonwebtoken": "^9.0.2",
-    "@types/pem-jwk": "^2.0.0",
-    "@typescript-eslint/eslint-plugin": "^6.2.0",
-    "@typescript-eslint/parser": "^6.2.0",
-    "dotenv": "^16.3.1",
-    "eslint": "^8.45.0",
-    "hono": "^3.3.4",
-    "jest": "^29.6.1",
-    "jest-environment-miniflare": "^2.14.0",
-    "jsonwebtoken": "^9.0.1",
-    "lefthook": "^1.4.7",
-    "pem-jwk": "^2.0.0",
-    "prettier": "^3.0.0",
-    "publint": "^0.2.0",
-    "rimraf": "^5.0.1",
-    "ts-jest": "^29.1.1",
-    "typescript": "^5.1.6",
-    "wrangler": "^3.0.0"
-  },
-  "keywords": [
-    "cloudflare",
-    "workers",
-    "jwt",
-    "rsa",
-    "verify",
-    "RS256",
-    "authentication",
-    "hono",
-    "middleware"
-  ]
+  "scripts": {},
+  "devDependencies": {}
 }
