--- a/packages/rsa-jwt/package.json
+++ b/packages/rsa-jwt/package.json
@@ -2,7 +2,7 @@
   "name": "verify-rsa-jwt-cloudflare-worker",
   "description": "Verify RSA JWT on Cloudflare Workers",
   "author": "Wataru Oguchi",
-  "version": "1.0.6",
+  "version": "1.1.6",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -26,7 +26,7 @@
     "lint:fix": "eslint --fix --ext .ts src",
     "prettier": "prettier --write --list-different '**/*.ts' '**/*.json' '**/*.js'",
     "prettier:check": "prettier --check '**/*.ts' '**/*.json' '**/*.js'",
-    "prepublish": "npm run test && npm run publint",
+    "prepublish": "npm run test && npx publint",
     "gen-pem-keys": "sh ./gen-pem-keys.sh"
   },
   "devDependencies": {
@@ -49,6 +49,7 @@
     "rimraf": "^5.0.1",
     "ts-jest": "^29.1.1",
     "typescript": "^5.1.6",
+    "vitest": "^1.4.0",
     "wrangler": "^3.0.0"
   },
   "keywords": [
