--- a/packages/rsa-jwt/package.json
+++ b/packages/rsa-jwt/package.json
@@ -12,9 +12,17 @@
     "registry": "https://registry.npmjs.org"
   },
   "bugs": "https://github.com/wataruoguchi/verify-rsa-jwt-cloudflare-worker/issues",
+  "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "type": "module",
+  "exports": {
+    ".": {
+      "import": {
+        "types": "./dist/index.d.ts",
+        "default": "./dist/index.js"
+      }
+    }
+  },
   "files": [
     "dist/**/*"
   ],
